@@ -40,6 +40,24 @@ task nightlyTests (type: Test) {
     }
 }
 
+task nightlysearchoffTests (type: Test) {
+    description 'Runs TestNG tests in the Java nightly test group.'
+    useTestNG(){
+      ignoreFailures = true
+      useDefaultListeners = true
+      jvmArgs '-Xmx2048m', '-XX:MaxPermSize=256m'
+      includeGroups 'nightly', 'nosearch'
+      excludeGroups 'search'
+
+      if(project.hasProperty('env')){
+          ext.testngfile = "/src/test/resources/${env}_testng.xml"
+       } else {
+          ext.testngfile = "/src/test/resources/local_testng.xml"
+       }
+      suites ext.testngfile
+    }
+}
+
 task smokeTests (type: Test) {
     description 'Runs TestNG tests in the Java smoke test group.'
     useTestNG(){
@@ -75,13 +93,40 @@ task docTests (type: Test) {
 
 }
 
+task pythonBlobTests(type: Exec) {
+    println 'Running blob api tests'
+    commandLine nosetestsCmd, 'src/test/python/blobApi.py'
+}
+task pythonDocTests(type: Exec) {
+    println 'Running doc api tests'
+    commandLine nosetestsCmd, 'src/test/python/docApi.py'
+}
+task pythonPluginTests(type: Exec) {
+    println 'Running plugin api tests'
+    commandLine nosetestsCmd, 'src/test/python/plugin.py'
+}
+task pythonEntitlementTests(type: Exec) {
+    println 'Running entitlement api tests'
+    commandLine nosetestsCmd, 'src/test/python/entitlementTests.py'
+}
+task pythonStructuredTests(type: Exec) {
+    println 'Running structured api tests'
+    commandLine nosetestsCmd, 'src/test/python/structured.py'
+}
+
 task pythonSearchTests(type: Exec) {
     description 'Run Python search tests using nosetests'
     println 'Running Python search tests'
     commandLine nosetestsCmd, 'src/test/python/searchTests.py'
 }
 
-task pythonTests(type: Test, dependsOn: pythonSearchTests) {
+task pythonTests(type: Test) {
+    dependsOn pythonBlobTests
+    dependsOn pythonDocTests
+    dependsOn pythonPluginTests
+    dependsOn pythonEntitlementTests
+    dependsOn pythonStructuredTests
+    dependsOn pythonSearchTests
     description 'Run Python tests'
     println 'Running Python tests'
 }
